# voclo

./: .gitignore  Cargo.toml  README.md  voclo_settings.json
.cargo/: config.toml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  model.rs  voice_converter.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: lib.rs
crates/effects/: Cargo.toml
crates/effects/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: character_presets.rs  lib.rs  settings.rs
presets/: default.json
