[workspace]
members = [
    "crates/app",
    "crates/ai",
    "crates/audio",
    "crates/dsp",
    "crates/effects",
    "crates/gui",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
cpal = "0.15"
ringbuf = "0.4"
fundsp = "0.15"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["wgpu", "puffin"] }
once_cell = "1"
crossbeam-channel = "0.5"
rustfft = "6"
num-complex = "0.4"
hound = "3"
