[package]
name = "voclo-app"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
voclo-audio = { path = "../audio" }
voclo-gui = { path = "../gui" }
voclo-effects = { path = "../effects" }
voclo-dsp = { path = "../dsp" }
