[package]
name = "voclo-effects"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
once_cell.workspace = true
voclo-dsp = { path = "../dsp" }
voclo-ai = { path = "../ai" }
rustfft.workspace = true
num-complex.workspace = true
